I added the invariant to the podcast service with some custom exceptions